--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+Multiplication Table App
 	<table ng-controller="MultiplicationCtrl as vm">
 		<tr ng-repeat="numberA in vm.numbers">
 			<td ng-repeat="numberB in vm.numbers">
