--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 </head>
 <body>
 Multiplication Table App
-	<table ng-controller="MultiplicationCtrl as vm">
-		<tr ng-repeat="numberA in vm.numbers">
-			<td ng-repeat="numberB in vm.numbers">
-				{{ numberA * numberB }}
-			</td>
-		</tr>
-	</table>
+	<div ng-controller="MultiplicationCtrl as vm" initial-number-limit="10">
+		<input type="number" ng-model="vm.numberLimit" placeholder="Enter a number">
+		<table>
+			<tr ng-repeat="numberA in vm.numbers()">
+				<td ng-repeat="numberB in vm.numbers()">
+					{{ vm.compute(numberA, numberB) }}
+				</td>
+			</tr>
+		</table>
 <script src="js/myApp.js"></script>
 </body>
 </html>
