--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
 	<meta charset="UTF-8">
 	<title>Multiplication Table</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+	<link href='https://fonts.googleapis.com/css?family=Schoolbell' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-Multiplication Table App
-	<div ng-controller="MultiplicationCtrl as vm" initial-number-limit="10">
-		<input type="number" ng-model="vm.numberLimit" placeholder="Enter a number">
-		<table>
-			<tr ng-repeat="numberA in vm.numbers()">
-				<td ng-repeat="numberB in vm.numbers()">
-					{{ vm.compute(numberA, numberB) }}
-				</td>
-			</tr>
-		</table>
+	<h1 class="text-center">Multiplication Table App</h1>
+		<div class="text-center" ng-controller="MultiplicationCtrl as vm" initial-number-limit="10">
+			<input class="text-center" type="number" ng-model="vm.numberLimit" placeholder="Enter a number">
+			<table>
+				<tr ng-repeat="numberA in vm.numbers()">
+					<td class="text-center" ng-repeat="numberB in vm.numbers()">
+						{{ vm.compute(numberA, numberB) }}
+					</td>
+				</tr>
+			</table>
+		</div>
 <script src="js/myApp.js"></script>
 </body>
 </html>
